--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formsy-react-components",
-  "version": "0.6.6",
+  "version": "0.6.6-zeto",
   "description": "A set of React JS components for use in a formsy-react form. Markup adheres to Bootstrap structure.",
   "scripts": {
     "test": "jest --coverage --noHighlight --verbose",
@@ -41,7 +41,7 @@
   "dependencies": {
     "classnames": "^2.1.3",
     "react": "^0.14.0",
-    "formsy-react": "^0.17.0"
+    "formsy-react": "0.18.0-1zeto"
   },
   "devDependencies": {
     "babel-eslint": "^4.1.0",
