--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "dependencies": {
     "classnames": "^2.1.3",
     "react": "^0.14.0",
-    "formsy-react": "0.18.0-1zeto"
+    "formsy-react": "0.18.0-za"
   },
   "devDependencies": {
     "babel-eslint": "^4.1.0",
